--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   width: 100%;
   min-height: 100vh;
@@ -32,4 +36,9 @@ body {
 #root {
   width: 100%;
   min-height: 100vh;
+}
+
+div {
+  scroll-margin: 20px;
+  scroll-snap-align: start;
 }
