--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Mabry Pro';
+  src: local('Mabry Pro'),
+    url('./fonts/MabryPro-Bold.ttf') format('truetype');
+  font-weight: bold;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
